update with main docs #patch

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@
 
 [metadata]
 name = RHEED-Learn
-description = Add a short description here!
+description = RHEED-Learn is a Python package for analyzing and visualizing Reflection High-Energy Electron Diffraction (RHEED) data, designed to streamline the processing of thin-film growth data and assist with materials characterization.
 author = Yichen Guo
 author_email = yig319@lehigh.edu
 license = MIT
